--- a/lift_basic/src/main/webapp/templates-hidden/default.html
+++ b/lift_basic/src/main/webapp/templates-hidden/default.html
@@ -3,11 +3,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title><span class="lift:Menu.title">code:app:0.1-SNAPSHOT</span></title>
-    <lift:CSS.blueprint />
-    <lift:CSS.fancyType />
-    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
-    <script id="json" src="/classpath/json.js" type="text/javascript"/>
+    <title class="lift:Menu.title">App: </title>
+    <style class="lift:CSS.blueprint"></style>
+    <style class="lift:CSS.fancyType"></style>
+    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+    <script id="json" src="/classpath/json.js" type="text/javascript"></script>
     <style type="text/css">
 /* <![CDATA[ */
 .edit_error_class {
@@ -55,22 +55,22 @@
   <body>
     <div class="container">
       <div class="column span-12 last" style="text-align: right">
-        <h1 class="alt">app<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
+        <h1 class="alt">app<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"></h1>
       </div>
 
-      <hr/>
+      <hr>
 
       <div class="column span-6 colborder sidebar">
-        <hr class="space" />
+        <hr class="space" >
 
-	<span class="lift:Menu.builder"/>
+	<span class="lift:Menu.builder"></span>
 
-        <div class="lift:Msgs?showAll=true"/>
+        <div class="lift:Msgs?showAll=true"></div>
         <hr class="space" />
       </div>
 
       <div class="column span-17 last">
-        <lift:bind name="content" />
+        <div id="content">The main content will get bound here</div>
       </div>
 
       <hr />
