--- a/scala_29/lift_mvc/src/main/webapp/templates-hidden/default.html
+++ b/scala_29/lift_mvc/src/main/webapp/templates-hidden/default.html
@@ -3,10 +3,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <lift:CSS.blueprint />
-    <lift:CSS.fancyType />
-    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
-    <script id="json" src="/classpath/json.js" type="text/javascript"/>
+    <title class="lift:Menu.title">App: </title>
+    <style class="lift:CSS.blueprint"></style>
+    <style class="lift:CSS.fancyType"></style>
+    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+    <script id="json" src="/classpath/json.js" type="text/javascript"></script>
     <style type="text/css">
 /* <![CDATA[ */
 .edit_error_class {
@@ -54,20 +55,20 @@
   <body>
     <div class="container">
       <div class="column span-12 last" style="text-align: right">
-        <h1 class="alt">app<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
+        <h1 class="alt">app<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"></h1>
       </div>
-
-      <hr/>
-
-      <div class="column span-23 last">
-        <lift:bind name="content" />
+      <hr>
+      <div class="column span-6 colborder sidebar">
+        <hr class="space" />
       </div>
-
+      <div class="column span-17 last">
+        <div id="content">The main content will get bound here</div>
+      </div>
       <hr />
       <div class="column span-23 last" style="text-align: center">
         <h4 class="alt">
           <a href="http://www.liftweb.net"><i>Lift</i></a> 
-	  is Copyright 2007-2011 WorldWide Conferencing, LLC.
+	  is Copyright 2007-2012 WorldWide Conferencing, LLC.
 	  Distributed under an Apache 2.0 License.</h4>
       </div>
     </div>
